--- a/index.html
+++ b/index.html
@@ -1856,7 +1856,7 @@
    <div class="tab-pane container fade" id="payonline"> 
     <h1><button class="btn btn-warning" style="color: white;">PAY NOW</button> </h1> 
     <h3>Make A Payment</h3> 
-    <h1><img src="/storage/emulated/0/Download/online-payment-1-1.jpg" alt="asha" height="500px" width="800px" < h1> <br> </h1> 
+    <h1><img src="online-payment-1-1.jpg " alt="asha" height="500px" width="800px" < h1> <br> </h1> 
     <br> 
     <h1><button class="btn btn-warning" style="color: white;">PAY NOW</button> </h1> 
     <h3>Make A Deposit</h3> 
