--- a/index.html
+++ b/index.html
@@ -1860,7 +1860,7 @@
     <br> 
     <h1><button class="btn btn-warning" style="color: white;">PAY NOW</button> </h1> 
     <h3>Make A Deposit</h3> 
-    <h1><img src="/storage/emulated/0/Download/aktualnosci_6-1024x620.jpg" alt="asha" height="500px" width="800px" < h1> </h1> 
+    <h1><img src="aktualnosci_6-1024x620.jpg" alt="asha" height="500px" width="800px" < h1> </h1> 
     <br> 
     <footer> 
      <div class="row"> 
