--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h6> 🏥 HEALTH CARE </h6> 
   <div class="row"> 
    <div class="col-8"> 
-    <h5><img src="aktualnosci_6-1024x620.jpg"width="120" height="60"> </h5> 
+    <h5><img src="DT0Ai93X0AA0b"width="120" height="60"> </h5> 
    </div> 
    <div class="col-2" style="background-color:crimson;"> 
     <h5> Emergency 
@@ -2389,7 +2389,7 @@
       or 
     </div> 
     <div> 
-     <img src="/storage/emulated/0/Download/DT0Ai93X0AA0b-E.png" width="120" height="60"> 
+     <img src="DT0Ai93X0AA0b-E.png" width="120" height="60"> 
     </div> 
     <div> 
      <img src="  360_F_141444136_xgRBZPlCkv1FEyzcAfK1iH6JzLLWxIfl.jpg   " width="700px" height="500px"> 
