--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@
      </div> 
     </div> 
     <div> 
-     <img src="/storage/emulated/0/Download/contactus.jpg" width="700px" height="500px"> 
+     <img src="contactus.jpg"width="700px"height="500px"> 
     </div> 
     <br> 
     <footer> 
@@ -2130,7 +2130,7 @@
      </div> 
      <br> 
      <div> 
-      <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211007_083159.jpg" width="700px" height="500px"> 
+      <img src="IMG_20211007_083159.jpg"width="700px"height="500px"> 
      </div> 
     </form> 
     <br> 
