--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@
      </div> 
     </div> 
     <div> 
-     <img src="contactus.jpg"width="700px"height="500px"> 
+     <img src="ContactUs.jpg"width="700px"height="500px"> 
     </div> 
     <br> 
     <footer> 
