--- a/index.html
+++ b/index.html
@@ -1449,7 +1449,7 @@
     <div class="row"> 
      <div class="col-12" style="background-color: red;"> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_151310.jpg" width="740" height="400"> </h1> 
+       <h1> <img src="IMG_20211003_151310.jpg"width="740"height="400"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1457,7 +1457,7 @@
     <div class="row"> 
      <div class="col-12" style="background-color: green;"> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_151225.jpg" width="740" height="400"> </h1> 
+       <h1> <img src="IMG_20211003_151225.jpg"width="740"height="400"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1465,7 +1465,7 @@
     <div class="row"> 
      <div class="col-12" style="background-color: pink;"> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_151253.jpg" width="740" height="400"> </h1> 
+       <h1> <img src="IMG_20211003_151253.jpg"width="740"height="400"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1473,7 +1473,7 @@
     <div class="row"> 
      <div class="col-12" style="background-color: blue;"> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_151325.jpg" width="740" height="400"> </h1> 
+       <h1> <img src="IMG_20211003_151325.jpg"width="740"height="400"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1481,7 +1481,7 @@
     <div class="row"> 
      <div class="col-12" style="background-color: yellow;"> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_151400.jpg" width="740" height="400"> </h1> 
+       <h1> <img src="IMG_20211003_151400.jpg"width="740"height="400"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1489,7 +1489,7 @@
     <div class="row"> 
      <div class="col-12" style="background-color: cadetblue;"> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_151424.jpg" width="740" height="400"> </h1> 
+       <h1> <img src="IMG_20211003_151424.jpg"width="740"height="400"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1501,7 +1501,7 @@
       </div> 
       <p> Cardiology is the study and treatment of disorders of the heart and the blood vessels. A person with heart disease or cardiovascular disease may be referred to a cardiologist. Cardiology is a branch of internal medicine. ... A cardiologist specializes in diagnosing and treating diseases of the cardiovascular system.</p> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_151126.jpg" width="690" height="500"> </h1> 
+       <h1> <img src="IMG_20211003_151126.jpg"width="690"height="500"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1513,7 +1513,7 @@
       </div> 
       <p> Oncology is a branch of medicine that deals with the prevention, diagnosis, and treatment of cancer. A medical professional who practices oncology is an oncologist. The name's etymological origin is the Greek word ὄγκος, meaning 1. "burden, volume, mass" and 2. "barb", and the Greek word λόγος, meaning "study". </p> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_151146.jpg" width="690" height="500"> </h1> 
+       <h1> <img src="IMG_20211003_151146.jpg"width="690"height="500"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1525,7 +1525,7 @@
       </div> 
       <p> Orthopaedics is the medical specialty that focuses on injuries and diseases of your body's musculoskeletal system. This complex system, which includes your bones, joints, ligaments, tendons, muscles, and nerves, allows you to move, work, and be active. And anybody can break a bone.</p> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_151111.jpg" width="690" height="500"> </h1> 
+       <h1> <img src="IMG_20211003_151111.jpg"width="690"height="500"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1537,7 +1537,7 @@
       </div> 
       <p> Robotic surgery, or robot-assisted surgery, allows doctors to perform many types of complex procedures with more precision, flexibility and control than is possible with conventional techniques. Robotic surgery is usually associated with minimally invasive surgery — procedures performed through tiny incisions.</p> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_151056.jpg" width="690" height="500"> </h1> 
+       <h1> <img src="IMG_20211003_151056.jpg"width="690"height="500"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1549,7 +1549,7 @@
       </div> 
       <p> Nephrology is a specialty of adult internal medicine and pediatric medicine that concerns the study of the kidneys, specifically normal kidney function and kidney disease, the preservation of kidney health, and the treatment of kidney disease, from diet and medication to renal replacement therapy. </p> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_151022.jpg" width="690" height="500"> </h1> 
+       <h1> <img src="IMG_20211003_151022.jpg"width="690"height="500"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1561,7 +1561,7 @@
       </div> 
       <p> Neurology is a branch of medicine dealing with disorders of the nervous system. Neurology deals with the diagnosis and treatment of all categories of conditions and disease involving the central and peripheral nervous systems, including their coverings, blood vessels, and all effector tissue, such as muscle. </p> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_150954.jpg" width="690" height="500"> </h1> 
+       <h1> <img src="IMG_20211003_150954.jpg"width="690"height="500"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1573,7 +1573,7 @@
       </div> 
       <p> Urology, also known as genitourinary surgery, is the branch of medicine that focuses on surgical and medical diseases of the male and female urinary-tract system and the male reproductive organs.</p> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_150908.jpg" width="690" height="500"> </h1> 
+       <h1> <img src="IMG_20211003_150908.jpg"width="690"height="500"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1585,7 +1585,7 @@
       </div> 
       <p> According to the American College of Gastroenterology, Gastroenterology is the study of the normal function and diseases of the esophagus, stomach, small intestine, colon and rectum, pancreas, gallbladder, bile ducts and liver.</p> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_150834.jpg" width="690" height="500"> </h1> 
+       <h1> <img src="IMG_20211003_150834.jpg"width="690"height="500"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1597,7 +1597,7 @@
       </div> 
       <p> Bariatric/weight loss surgery is the only valid treatment option that leads to sustained weight loss in patients suffering from clinically severe obesity. Most people who suffer from obesity have usually tried all methods to lose weight without success before they consider surgery. </p> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_150811.jpg" width="690" height="500"> </h1> 
+       <h1> <img src="IMG_20211003_150811.jpg"width="690"height="500"> </h1> 
       </div> 
      </div> 
     </div> 
@@ -1609,7 +1609,7 @@
       </div> 
       <p>Pulmonary Medicine at Health care Hospitals provides expertise in a broad range of diseases including asthma, COPD, critical care, cystic fibrosis, interstitial lung disease, lung cancer, neuromuscular disease, pulmonary hypertension, sarcoidosis, and sleep medicine. The smoke cessation clinics, COPD clinics are specialized clinics which offer tailor made programs and run by a team of Pulmonologist and paramedical teams. Our smoke cessation programs are the best in the country with huge success rate and are implemented by many corporate companies for their employees. Hospitals is your one-stop destination to book the finest Pulmonologist in your town. </p> 
       <div> 
-       <h1> <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211003_150745.jpg" width="690" height="500"> </h1> 
+       <h1> <img src="IMG_20211003_150745.jpg"width="690"height="500"> </h1> 
       </div> 
      </div> 
     </div> 
