--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
       </div> 
       <div class="card-body"> 
        <div class="card-title"> 
-        <img src="/storage/emulated/0/Download/Max-Hospital-800x438.jpg " alt="no img" height="500px" width="650px"> 
+        <img src="Max-Hospital-800x438.jpg"alt="no img"height="500px"width="650px"> 
        </div> 
       </div> 
       <div class="card-footer"> 
@@ -768,7 +768,7 @@
       </div> 
       <div class="card-body"> 
        <div class="card-title"> 
-        <img src="/storage/emulated/0/Download/hirandani-hospital.jpg " alt="no img" height="500px" width="650px"> 
+        <img src="hirandani-hospital.jpg"alt="no img"height="500px"width="650px"> 
        </div> 
       </div> 
       <div class="card-footer"> 
@@ -789,7 +789,7 @@
       </div> 
       <div class="card-body"> 
        <div class="card-title"> 
-        <img src="/storage/emulated/0/Download/fortis-escorts-hospital-faridabad.jpg " alt="no img" height="500px" width="650px"> 
+        <img src="fortis-escorts-hospital-faridabad.jpg"alt="no img"height="500px"width="650px"> 
        </div> 
       </div> 
       <div class="card-footer"> 
@@ -810,7 +810,7 @@
       </div> 
       <div class="card-body"> 
        <div class="card-title"> 
-        <img src="/storage/emulated/0/Download/5-best-hospitals-in-india-l.jpg " alt="no img" height="500px" width="650px"> 
+        <img src="5-best-hospitals-in-india-l.jpg"alt="no img"height="500px"width="650px"> 
        </div> 
       </div> 
       <div class="card-footer"> 
@@ -831,7 +831,7 @@
       </div> 
       <div class="card-body"> 
        <div class="card-title"> 
-        <img src="/storage/emulated/0/Download/0c23c56676dab93fbd65421438c6b817.jpg " alt="no img" height="500px" width="650px"> 
+        <img src="0c23c56676dab93fbd65421438c6b817.jpg"alt="no img"height="500px"width="650px"> 
        </div> 
       </div> 
       <div class="card-footer"> 
@@ -852,7 +852,7 @@
       </div> 
       <div class="card-body"> 
        <div class="card-title"> 
-        <img src="/storage/emulated/0/Download/1247171791nanavati-02.jpg " alt="no img" height="500px" width="650px"> 
+        <img src="1247171791nanavati-02.jpg"alt="no img"height="500px"width="650px"> 
        </div> 
       </div> 
       <div class="card-footer"> 
@@ -873,7 +873,7 @@
       </div> 
       <div class="card-body"> 
        <div class="card-title"> 
-        <img src="/storage/emulated/0/Download/269eead.png " alt="no img" height="500px" width="650px"> 
+        <img src="269eead.png"alt="no img"height="500px"width="650px"> 
        </div> 
       </div> 
       <div class="card-footer"> 
@@ -894,7 +894,7 @@
       </div> 
       <div class="card-body"> 
        <div class="card-title"> 
-        <img src="/storage/emulated/0/Download/Lilavati-Hospital.jpg " alt="no img" height="500px" width="650px"> 
+        <img src="Lilavati-Hospital.jpg"alt="no img"height="500px"width="650px"> 
        </div> 
       </div> 
       <div class="card-footer"> 
@@ -915,7 +915,7 @@
       </div> 
       <div class="card-body"> 
        <div class="card-title"> 
-        <img src="/storage/emulated/0/Download/45.jpg " alt="no img" height="500px" width="650px"> 
+        <img src="45.jpg"alt="no img"height="500px"width="650px"> 
        </div> 
       </div> 
       <div class="card-footer"> 
