--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     <br> 
     <br> 
     <!--Modal--> 
-    <button type="button" data-toggle="modal" data-target="#ex"><img src="/storage/emulated/0/Download/General_-_Office_30-512.png" width="500" height="300"></button> 
+    <button type="button" data-toggle="modal" data-target="#ex"><img src="General_-_Office_30-512.png"width="100"height="100"></button> 
     <div class="modal fade" id="ex" role="dialog" aria-hidden="true" aria-labelledby="exp"> 
      <div class="modal-dialog modal-scrollable" role="document"> 
       <div class="modal-content"> 
@@ -422,7 +422,7 @@
       <h1> Best Clinical Outcomes</h1> 
       <p>Leveraging its vast medical expertise &amp; technological advantage,Health Care Hospitals has consistently delivered best in class clinical outcomes.</p> 
       <div> 
-       <img src="/storage/emulated/0/DCIM/Screenshots/IMG_20211005_184255.jpg" width="700px" height="500px"> 
+       <img src="IMG_20211005_184255.jpg"width="700px"height="500px"> 
       </div> 
      </div> 
     </div> 
