--- a/index.html
+++ b/index.html
@@ -796,9 +796,9 @@
        <div>
          Bengaluru,karnataka 
        </div> 
-       <img src="/storage/emulated/0/Download/google-voice-logo.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
+       <img src="google-voice-logo.jpg" width="60" height="50"> 
+       <img src="1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
+       <img src="macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
       </div> 
      </div> 
     </div> 
@@ -817,9 +817,9 @@
        <div>
          Chilakaluripet,Guntur,Andra Pradesh 
        </div> 
-       <img src="/storage/emulated/0/Download/google-voice-logo.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
+       <img src="google-voice-logo.jpg" width="60" height="50"> 
+       <img src="1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
+       <img src="macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
       </div> 
      </div> 
     </div> 
@@ -838,9 +838,9 @@
        <div>
          Quatab Institutional Area, New Delhi 
        </div> 
-       <img src="/storage/emulated/0/Download/google-voice-logo.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
+       <img src="google-voice-logo.jpg" width="60" height="50"> 
+       <img src="1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
+       <img src="macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
       </div> 
      </div> 
     </div> 
@@ -859,9 +859,9 @@
        <div>
          Super speciality Hospital in Mumbai 
        </div> 
-       <img src="/storage/emulated/0/Download/google-voice-logo.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
+       <img src="google-voice-logo.jpg" width="60" height="50"> 
+       <img src="1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
+       <img src="macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
       </div> 
      </div> 
     </div> 
@@ -880,9 +880,9 @@
        <div>
          National Institute of Mental Health &amp; Neurosciences 
        </div> 
-       <img src="/storage/emulated/0/Download/google-voice-logo.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
+       <img src="google-voice-logo.jpg" width="60" height="50"> 
+       <img src="1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
+       <img src="macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
       </div> 
      </div> 
     </div> 
@@ -901,9 +901,9 @@
        <div>
          Lilavati Multi Speciality Hospital in Mumbai,Maharashtra 
        </div> 
-       <img src="/storage/emulated/0/Download/google-voice-logo.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
+       <img src="google-voice-logo.jpg" width="60" height="50"> 
+       <img src="1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
+       <img src="macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
       </div> 
      </div> 
     </div> 
