--- a/index.html
+++ b/index.html
@@ -922,9 +922,9 @@
        <div>
          TATA Memorial Hospital in Mumbai 
        </div> 
-       <img src="/storage/emulated/0/Download/google-voice-logo.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
-       <img src="/storage/emulated/0/Download/macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
+       <img src="google-voice-logo.jpg" width="60" height="50"> 
+       <img src="1626079387_featured-image-2021-07-12t141141.896.jpg" width="60" height="50"> 
+       <img src="macos-big-sur-messages-icon-100865941-orig-5.jpg" width="60" height="50"> 
       </div> 
      </div> 
     </div> 
