--- a/index.html
+++ b/index.html
@@ -431,18 +431,18 @@
      <div class="row"> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/174857.png " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="174857.png " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
@@ -943,36 +943,36 @@
      <div class="row"> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/174857.png " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="174857.png " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
      <div class="row"> 
       <div class="col-4" style="background-color: cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
@@ -1212,36 +1212,36 @@
      <div class="row"> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/174857.png " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="174857.png " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
      <div class="row"> 
       <div class="col-4" style="background-color: cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
@@ -1624,36 +1624,36 @@
      <div class="row"> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/174857.png " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="174857.png " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
      <div class="row"> 
       <div class="col-4" style="background-color: cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
@@ -1866,36 +1866,36 @@
      <div class="row"> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/174857.png " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="174857.png " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
      <div class="row"> 
       <div class="col-4" style="background-color: cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
@@ -2138,36 +2138,36 @@
      <div class="row"> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/174857.png " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="174857.png " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
      <div class="row"> 
       <div class="col-4" style="background-color: cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
@@ -2399,36 +2399,36 @@
      <div class="row"> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="505-5053152_fb-logo-icon-png-transparent-png.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/174857.png " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="174857.png " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="images.jpeg" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
      <div class="row"> 
       <div class="col-4" style="background-color: cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
