--- a/index.html
+++ b/index.html
@@ -449,18 +449,18 @@
      <div class="row"> 
       <div class="col-4" style="background-color: cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="717.jpg " class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <br> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="Gmail.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
-        <h1> <img src="/storage/emulated/0/Download/1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
+        <h1> <img src="1384060.png" class="rounded-circle" width="100" height="100"> </h1> 
        </div> 
       </div> 
      </div> 
