--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script> 
   <!-- Latest compiled JavaScript --> 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
+ <link rel="stylesheets"href="style.css">
  </head> 
  <body> 
   <h6> 🏥 HEALTH CARE </h6> 
