--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
  <link rel="stylesheets"href="style.css">
  </head> 
- <body> 
-  <h6> 🏥 HEALTH CARE </h6> 
+ <body> <div style="color:green";>
+  <h6> 🏥 HEALTH CARE </h6> </div>
   <div class="row"> 
    <div class="col-8"> 
      <img src="DT0Ai93X0AA0b-E.png"width="120" height="60"> </h5> 
@@ -113,7 +113,7 @@
     </div> 
     <!--end crsl--> 
     <br> 
-    <footer> 
+    <footer class="background-image:url("174857");"> 
      <div class="row"> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
