--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div> 
     <!--end crsl--> 
     <br> 
-    <footer class="background-image:url("174857");"> 
+    <footer style="background-color:cyan;"> 
      <div class="row"> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
