--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
  <link rel="stylesheets"href="style.css">
  </head> 
- <body> <div style="color:green";>
+ <body> <div style="color:green";class="text-align:center;">
   <h6> 🏥 HEALTH CARE </h6> </div>
   <div class="row"> 
    <div class="col-8"> 
@@ -33,7 +33,7 @@
    </div> 
   </div> 
   <!-- Nav tabs --> 
-  <ul class="nav nav-tabs"> 
+  <ul class="nav nav-tabs"class="background-color:cyan;"> 
    <li class="nav-item"> <a class="nav-link active" data-toggle="tab" href="#home"> 🏡Home</a> </li> 
    <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#menu"> ☰ Menu</a> </li> 
    <li class="nav-item"> <a class="nav-link" data-toggle="tab" href="#hospitals"> 🏥Hospitals</a> </li> 
@@ -113,7 +113,7 @@
     </div> 
     <!--end crsl--> 
     <br> 
-    <footer style="background-color:cyan;"> 
+    <footer style="background-color:white;"> 
      <div class="row"> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
