--- a/index.html
+++ b/index.html
@@ -1173,31 +1173,31 @@
      </div> 
     </footer> 
    </div> 
-   <div class="tab-pane container fade" id="contactus"class="background-color::pink";>
+   <div class="tab-pane container fade" id="contactus"style="background-color::pink";>
      
     <div class="wrapper"> 
      <h2>Contact Details</h2> 
-     <div class="input_field"> enter first name:
+     <div class="input_field"> 
       <input type="text" name="first name" id="fname" placeholder="enter first name"> 
      </div> 
      <br> 
-     <div class="input_field"> enter last name:
+     <div class="input_field"> 
       <input type="text" name="last name" id="lname" placeholder="enter last name"> 
      </div> 
      <br> 
-     <div class="input_field"> subject:
+     <div class="input_field"> 
       <input type="text" name="subject" id="subject" placeholder="enter your subject"> 
      </div> 
      <br> 
-     <div class="input_field"> email id:
+     <div class="input_field"> 
       <input type="text" name="email" id="email" placeholder="enter emial address"> 
      </div> 
      <br> 
-     <div class="input_field"> mobile:
+     <div class="input_field"> 
       <input type="text" name="phone" id="phone" placeholder="enter your number"> 
      </div> 
      <br> 
-     <div class="input_field"> message:
+     <div class="input_field"> 
       <textarea name="message" id="message" placeholder="message here"></textarea> 
      </div> 
      <br> 
