--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
  <link rel="stylesheets"href="style.css">
  </head> 
- <body> <div style="color:green";class="text-align:center;">
+ <body style="background-color:cyan;"> <div style="color:green";style="text-align:center;">
   <h6> 🏥 HEALTH CARE </h6> </div>
   <div class="row"> 
    <div class="col-8"> 
