--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> 
  <link rel="stylesheets"href="style.css">
  </head> 
- <body style="background-color:cyan;"> <div style="color:green";style="text-align:center;">
-  <h6> 🏥 HEALTH CARE </h6> </div>
+ <body style="background-color:cyan;"> <div style="color:green";>
+  <h6 style="text-align:center;"> 🏥 HEALTH CARE </h6> </div>
   <div class="row"> 
    <div class="col-8"> 
      <img src="DT0Ai93X0AA0b-E.png"width="120" height="60"> </h5> 
@@ -113,7 +113,8 @@
     </div> 
     <!--end crsl--> 
     <br> 
-    <footer style="background-color:white;"> 
+    <div style="background-color:pink;">
+    <footer> 
      <div class="row"> 
       <div class="col-4" style="background-color:cadetblue;"> 
        <div> 
@@ -345,6 +346,7 @@
       </div> 
      </div> 
     </footer> 
+     </div>
    </div> 
    <div class="tab-pane container fade" id="menu"> 
     <br> 
