--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <link rel="stylesheets"href="style.css">
  </head> 
  <body style="background-color:cyan;"> <div style="color:green";>
-  <h6 style="text-align:center;"> 🏥 HEALTH CARE </h6> </div>
+  <h6 style="text-align:center"> 🏥 HEALTH CARE </h6> </div>
   <div class="row"> 
    <div class="col-8"> 
      <img src="DT0Ai93X0AA0b-E.png"width="120" height="60"> </h5> 
